found_online/pastebin.com_FNwfaEED/iptables-save
root@testaca1:~# iptables-save
# Generated by iptables-save v1.4.21 on Thu Jul  2 12:35:40 2015
*nat
:PREROUTING ACCEPT [553:20627]
:INPUT ACCEPT [545:20067]
:OUTPUT ACCEPT [328:62572]
:POSTROUTING ACCEPT [464:70814]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.2.0.0/16 ! -o weave -j MASQUERADE
-A POSTROUTING -s 10.2.1.4/32 -d 10.2.1.4/32 -p tcp -m tcp --dport 6783 -j MASQUERADE
-A POSTROUTING -s 10.2.1.4/32 -d 10.2.1.4/32 -p udp -m udp --dport 6783 -j MASQUERADE
-A DOCKER ! -i weave -p tcp -m tcp --dport 6783 -j DNAT --to-destination 10.2.1.4:6783
-A DOCKER ! -i weave -p udp -m udp --dport 6783 -j DNAT --to-destination 10.2.1.4:6783
COMMIT
# Completed on Thu Jul  2 12:35:40 2015
# Generated by iptables-save v1.4.21 on Thu Jul  2 12:35:40 2015
*filter
:INPUT ACCEPT [44726:121346379]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [39609:2387186]
:DOCKER - [0:0]
-A FORWARD -o weave -j DOCKER
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -i weave -o weave -j ACCEPT
-A DOCKER -d 10.2.1.4/32 ! -i weave -o weave -p tcp -m tcp --dport 6783 -j ACCEPT
-A DOCKER -d 10.2.1.4/32 ! -i weave -o weave -p udp -m udp --dport 6783 -j ACCEPT
COMMIT
# Completed on Thu Jul  2 12:35:40 2015





root@testaca2:~# iptables-save
# Generated by iptables-save v1.4.21 on Thu Jul  2 12:35:35 2015
*nat
:PREROUTING ACCEPT [501:18379]
:INPUT ACCEPT [491:17689]
:OUTPUT ACCEPT [684:129461]
:POSTROUTING ACCEPT [688:129773]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.2.0.0/16 ! -o weave -j MASQUERADE
-A POSTROUTING -s 10.2.2.1/32 -d 10.2.2.1/32 -p tcp -m tcp --dport 6783 -j MASQUERADE
-A POSTROUTING -s 10.2.2.1/32 -d 10.2.2.1/32 -p udp -m udp --dport 6783 -j MASQUERADE
-A DOCKER ! -i weave -p tcp -m tcp --dport 6783 -j DNAT --to-destination 10.2.2.1:6783
-A DOCKER ! -i weave -p udp -m udp --dport 6783 -j DNAT --to-destination 10.2.2.1:6783
COMMIT
# Completed on Thu Jul  2 12:35:35 2015
# Generated by iptables-save v1.4.21 on Thu Jul  2 12:35:35 2015
*filter
:INPUT ACCEPT [39324:2086820]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9489:119700908]
:DOCKER - [0:0]
-A FORWARD -o weave -j DOCKER
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -i weave -o weave -j ACCEPT
-A DOCKER -d 10.2.2.1/32 ! -i weave -o weave -p tcp -m tcp --dport 6783 -j ACCEPT
-A DOCKER -d 10.2.2.1/32 ! -i weave -o weave -p udp -m udp --dport 6783 -j ACCEPT
COMMIT
# Completed on Thu Jul  2 12:35:35 2015
